# Software-Engineering-Projects

./: FIXES_APPLIED.md  QUICKSTART.md  README.md  STRUCTURE.txt  TESTING_COMPLETE.md  TEST_REPORT.md  build.sh
.github/workflows/: graphforge-pages.yml
Atlas/: .gitignore  README.md
Atlas/backend/: alembic.ini  app.py  database.py  models.py  requirements.txt  schemas.py  seed_categories.py
Atlas/backend/migrations/: README  env.py
Atlas/backend/migrations/versions/: 001_initial_schema.py  002_normalize_categories_and_timestamps.py
Atlas/backend/repositories/: __init__.py  entry_repository.py  report_repository.py  user_repository.py
Atlas/backend/scripts/: backup_db.py  export_data.py  import_legacy_data.py
Atlas/frontend/: index.html  package-lock.json  package.json  vite.config.js
Atlas/frontend/src/: App.jsx  api.js  main.jsx
Atlas/frontend/src/components/: CategoryList.jsx  EntriesFilters.jsx  EntriesPagination.jsx  EntriesTable.jsx  EntryForm.jsx  Navbar.jsx
Atlas/frontend/src/pages/: DashboardPage.jsx  EntriesPage.jsx  LoginPage.jsx
Atlas/frontend/src/styles/: styles.css
AutoDriver/: .gitignore  00_README_START.md  00_START_HERE_FINAL.md  ALL_PHASES_COMPLETE.md  AUTODRIVER_FINAL.md  AUTODRIVER_README.md  CMakeLists.txt  COMPLETED.md  CONGRATULATIONS.md  FINAL_CHECKLIST.md  FINAL_PROJECT_STATUS.md  INSTALL.md  PHASE2_COMPLETE.md  PHASES_3_4_COMPLETE.md  PHASE_1_2_SUMMARY.md  PHASE_5_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_RENAME.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_EXECUTIVE_SUMMARY.md  README_FIRST.md  START_HERE.md  SUMMARY.md  TRANSFORMATION_COMPLETE.md  benchmark_report.txt  benchmark_results.csv  benchmark_runner.cpp  demo.cpp  demo_final.cpp  demo_phase2.cpp  demo_phase3_4.cpp
AutoDriver/include/benchmark/: benchmark_suite.h
AutoDriver/include/core/: astar.h  dynamic_obstacle.h  grid.h  hybrid_astar.h  lane_planner.h  multi_agent.h  node.h  parking_planner.h  path_smoothing.h  performance_optimizer.h  rrt.h  vec2.h
AutoDriver/include/gui/: app.h  renderer.h
AutoDriver/src/benchmark/: benchmark_suite.cpp
AutoDriver/src/core/: astar.cpp  dynamic_obstacle.cpp  grid.cpp  hybrid_astar.cpp  lane_planner.cpp  multi_agent.cpp  parking_planner.cpp  path_smoothing.cpp  performance_optimizer.cpp  rrt.cpp
AutoDriver/src/gui/: app.cpp  main.cpp  renderer.cpp
AutoDriver/tests/: test_astar.cpp  test_dynamic_obstacles.cpp  test_grid.cpp  test_path_smoothing.cpp  test_rrt.cpp
Game360/: 2048.py  airhockey.py  brickbreaker.py  chess.py  pong.py  snakegame.py  tetris.py  tictactoe.py
HelixForge/: .gitignore  CMakeLists.txt  CRITICAL_FIXES.md  FINAL_VERDICT.md  LICENSE  PROJECT_SUMMARY.md  build.bat
HelixForge/src/phase1_core/: alphabet.hpp  sequence.cpp  types.hpp
HelixForge/src/phase2_evaluation/: constraint_engine.hpp  metrics.cpp  metrics.hpp
HelixForge/src/phase3_mutation/: mutation_engine.cpp  mutation_engine.hpp  rng.hpp
HelixForge/src/phase4_optimization/: genetic_algorithm.cpp  genetic_algorithm.hpp  hill_climbing.cpp  hill_climbing.hpp  simulated_annealing.hpp
HelixForge/src/phase5_interface/: cli.hpp  experiment_log.cpp  json_output.cpp  json_output.hpp
HelixForge/test_cases/: README_TESTS.md
PathFinder/: README.md
PathFinder/backend/: app.py  requirements.txt
PathFinder/backend/algorithms/: astar.py  bfs.py  bidirectional.py  dfs.py  dijkstra.py  greedy_best_first.py  jump_point_search.py  recursive_best_first.py
PathFinder/backend/utils/: grid_utils.py
PathFinder/frontend/: index.html
PathFinder/frontend/css/: styles.css
PathFinder/frontend/js/: animate.js  api.js  grid.js  main.js
SmartSignal/: .gitignore  CMakeLists.txt  README.md
SmartSignal/config/: default.yaml
SmartSignal/docs/: ECE_CONCEPTS.md  STATE_DIAGRAM.md  TIMING_SPEC.md
SmartSignal/include/smartsignal/: arbiter.hpp  config.hpp  debounce.hpp  detection.hpp  events.hpp  fsm.hpp  gpio.hpp  logger.hpp  types.hpp
SmartSignal/scripts/: visualize_log.py
SmartSignal/src/: arbiter.cpp  config.cpp  debounce.cpp  detection.cpp  fsm.cpp  gpio.cpp  logger.cpp  main.cpp
SmartSignal/tests/: test_debounce.cpp  test_detection.cpp  test_fsm.cpp
TI84Calc/: README.md
TI84Calc/docs/: app.js  styles.css
app/: main.cpp
bindings/python/: helixforge_bindings.cpp
docs/: PAGES_SETUP.md  app.js  index.html
examples/: example_usage.cpp
src/phase1_core/: sequence.hpp
src/phase2_evaluation/: constraint_engine.cpp  scoring.cpp  scoring.hpp
src/phase3_mutation/: rng.cpp
src/phase4_optimization/: beam_search.cpp  beam_search.hpp  optimizer.cpp  optimizer.hpp  simulated_annealing.cpp
src/phase5_interface/: cli.cpp  experiment_log.hpp
test_cases/: REAL_WORLD_TESTS.md  manual_verification.cpp
